--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,7 +16,9 @@ services:
         - WEBEX_ORG_ID=<ORG_ID>
         - WEBEX_APP_CLIENT_ID=<CLIENT_ID>
         - WEBEX_APP_CLIENT_SECRET=<CLIENT_SECRET>
+        - WEBEX_APP_RETURN_URL=http://localhost:3000
         - WEBEX_APP_REDIRECT_URL=http://localhost:3000/oauth
         - WEBEX_APP_AUTHORIZATION_URL=https://webexapis.com/v1/authorize
         - WEBEX_APP_TOKEN_URL=https://webexapis.com/v1/access_token
         - WEBEX_APP_SCOPES=Identity:contact
+        - PORT=3000
