--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "salesforce-webex-contact-sync",
-  "version": "1.2.0",
+  "version": "1.3.1",
   "main": "app.js",
   "scripts": {
     "start": "NODE_ENV=production node app.js",
@@ -27,8 +27,7 @@
     "nforce": "^1.13.0",
     "node-cron": "^3.0.0",
     "nodemon": "^3.0.1",
-    "phone": "^3.1.39",
-    "socket.io": "^4.7.2"
+    "phone": "^3.1.39"
   },
   "config": {
     "docker_username": "sieteunoseis",
