--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "salesforce-webex-contact-sync",
-  "version": "1.3.2",
+  "version": "1.4.0",
   "main": "app.js",
   "scripts": {
     "start": "NODE_ENV=production node app.js",
@@ -14,16 +14,16 @@
     "docker:prune": "docker system prune -a"
   },
   "author": "",
-  "license": "ISC",
-  "description": "",
+  "license": "MIT",
+  "description": "This is a Node.js app that uses Salesforce and Webex Oauth to sync contacts from Salesforce to Webex.  It is intended to be used as a reference for developers who want to build a similar integration.",
   "dependencies": {
     "axios": "^0.24.0",
     "codemirror": "^6.0.1",
     "console-stamp": "^3.1.2",
     "dotenv": "^10.0.0",
-    "ejs": "^3.1.9",
     "envalid": "^7.3.1",
-    "express": "^4.17.1",
+    "express": "^4.18.2",
+    "express-handlebars": "^7.1.2",
     "nforce": "^1.13.0",
     "node-cron": "^3.0.0",
     "nodemon": "^3.0.1",
